@@ -8,16 +8,33 @@ allprojects {
     version = "0.0.1"
     repositories {
         jcenter()
+        mavenLocal()
     }
 }
 
 tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED")
+    options.compilerArgs.add("--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED")
+    options.compilerArgs.add("--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED")
+    options.compilerArgs.add("--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED")
+    options.compilerArgs.add("--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED")
     options.compilerArgs.add("--enable-preview")
     options.fork()
     options.forkOptions.jvmArgs = listOf("--enable-preview")
 }
 
+val test by tasks.getting(Test::class) {
+    useJUnitPlatform()
+    jvmArgs = listOf("--enable-preview")
+}
+
 dependencies {
+    implementation("com.over64:jscripter:0.0.1")
+    implementation("org.antlr:antlr4-runtime:4.8-1")
+    implementation("org.eclipse.jetty:jetty-server:9.4.3.v20170317")
+    implementation("org.eclipse.jetty:jetty-servlet:9.4.3.v20170317")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.2")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.6.2")
 }
 
 publishing {
